--- a/tox.ini
+++ b/tox.ini
@@ -1,12 +1,12 @@
 [tox]
 minversion = 4.16.0
-envlist = py312, py313
+envlist = py311, py314
 isolated_build = true
 
 [gh-actions]
 python =
-    3.12: py312
-    3.13: py313
+    3.11: py311
+    3.14.0-alpha.2: py314
 
 [testenv]
 setenv =
