--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ build-backend = "setuptools.build_meta"
 name = "limeinstall"
 description = "Repository installation tool"
 classifiers = [
-    "Development Status :: 1 - Planning",
+    "Development Status :: 3 - Alpha",
     "License :: OSI Approved :: MIT License",
     "Operating System :: Microsoft :: Windows",
     "Operating System :: POSIX",
@@ -25,7 +25,7 @@ authors = [
 ]
 requires-python = ">=3.11"
 readme = "README.md"
-version = "0.0.1"
+version = "0.1.0"
 dynamic = [
     "dependencies",
     "optional-dependencies",
