--- a/.github/workflows/publish_main.yaml
+++ b/.github/workflows/publish_main.yaml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   tests:
-    uses: ./.github/workflows/tests.yaml
+    uses: ./.github/workflows/_tests.yaml
   build_and_publish:
     needs: tests
     runs-on: ubuntu-latest
@@ -18,12 +18,12 @@ jobs:
         uses: actions/checkout@v4
         with:
           ref: main
-      - name: Set up Python 3.11
+      - name: Set up Python
         uses: actions/setup-python@v5
         with:
-          python-version: '3.11'
-      - name: Install in editable mode
-        run: pip install .[build]
+          python-version: '3.13'
+      - name: Install
+        run: python install.py build
       - name: Build
         run: package
       - name: Publish to PyPI
