--- a/.github/workflows/_tests.yaml
+++ b/.github/workflows/_tests.yaml
@@ -8,7 +8,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest, windows-latest, macOS-latest]
-        python-version: ['3.11', '3.14']
+        python-version: ['3.11', '3.14.0-alpha.6']
     steps:
     - name: Checkout
       uses: actions/checkout@v4
